<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="find_button">Поиск</string>
    <string name="btn_media">Медиатека</string>
    <string name="btn_settings">Настройки</string>
    <string name="btn_theme">Тёмная тема</string>
    <string name="btn_share">Поделиться приложением</string>
    <string name="btn_help">Написать в поддержку</string>
    <string name="btn_licence">Пользовательское соглашение</string>
    <string name="button_back">btnBack</string>
    <string name="share_app" translatable="false">share_app</string>
    <string name="button_help" translatable="false">button help</string>
    <string name="search">Поиск</string>
    <string name="clear">Очистить поле ввода</string>
    <string name="share_text">Изучайте Android-разработку с Яндекс Практикумом: https://practicum.yandex.ru/android-developer/</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/\n</string>
    <string name="search_toast_text_added">Вы ввели текст для поиска: </string>
    <string name="search_toast_text_null">Поле поиска пустое</string>
    <string name="media_library">Медиатека</string>
    <string name="support_manager" translatable="false">capitan@latinoamerica512.ru</string>
    <string name="track_artwork">Обложка трека</string>
    <string name="no_internet_message">Нет интернета</string>
    <string name="retry">Обновить</string>
    <string name="no_internet_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="nothing_founded">Ничего не нашлось</string>
    <string name="text_for_toast_write_something">Введите текст для поиска</string>
    <string name="history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="toast_track_added">"%1$s" добавлен в историю</string>
    <string name="track_cover_description">Обложка трека</string>
    <string name="sample_artist_name" translatable="false">my_awesome_artist</string>
    <string name="sample_track_name" translatable="false">My Awesome Track</string>
    <string name="add_track_to_playlist" translatable="false">Add track to playlist</string>
    <string name="set_play_or_pause" translatable="false">Set play or pause</string>
    <string name="like_track" translatable="false">Liked track</string>
    <string name="unknown_track" translatable="false">Неизвестный трек</string>
    <string name="unknown_artist" translatable="false">Неизвестный исполнитель</string>
    <string name="unknown_duration" translatable="false">Some duration</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="no_favorites_description">Ваша медиатека пуста</string>
    <string name="favorites_description">Ваши избранные треки</string>
    <string name="you_didnt_create_any_list">Вы не создали\nни одного плейлиста</string>

    <string name="create_playlist">Новый плейлист</string>
    <string name="new_pl_descr">Описание</string>
    <string name="new_pl_name">Название*</string>
    <string name="new_pl_update">Обновить</string>
    <string name="new_pl_create">Создать</string>
    <string name="new_pl_created">создан</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="alert_dialog_title">Завершить создание плейлиста?</string>
    <string name="alert_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="alert_dialog_positive">Завершить</string>
    <string name="alert_dialog_negative">Отмена</string>

    <string name="choose_image_from">Загрузить изображение...</string>
    <string name="share_playlist">Поделиться</string>
    <string name="playlist_info_edit">Редактировать информацию</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков</string>
    <string name="delete_playlist_message">Вы действительно хотите удалить плейлист "%1$s"?</string>
    <string name="delete">Удалить</string>
    <string name="no_tracks_to_share_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist_title">Поделиться плейлистом</string>
    <string name="edit_playlist_title">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="playlist_error">Плейлист не загружен</string>
    <string name="delete_track_title">Удалить трек</string>
    <string name="delete_track_message">Вы действительно хотите удалить трек «%1$s» из плейлиста?</string>


</resources>