<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaFragment">  <!-- Стартовый фрагмент -->

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.practicum.playlistmaker.search.ui.SearchFragment"
        android:label="@string/search" />

    <fragment
        android:id="@+id/mediaFragment"
        android:name="com.practicum.playlistmaker.media.MediaFragment"
        android:label="@string/media_library">

        <action
            android:id="@+id/action_mediaFragment_to_playlistCreatorFragment"
            app:destination="@id/playlistCreatorFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.practicum.playlistmaker.settings.ui.SettingsFragment"
        android:label="@string/btn_settings" />

    <fragment
        android:id="@+id/playlistCreatorFragment"
        android:name="com.practicum.playlistmaker.media.fragments.creator.view.PlaylistCreatorFragment"
        android:label="@string/create_playlist">
    </fragment>

    <fragment
        android:id="@+id/addToPlaylistBottomSheetFragment"
        android:name="com.practicum.playlistmaker.player.ui.view.AddToPlaylistBottomSheetFragment"
        android:label="AddToPlaylistBottomSheetFragment">
        <action
            android:id="@+id/action_addToPlaylistBottomSheetFragment_to_playlistCreatorFragment"
            app:destination="@id/playlistCreatorFragment" />
    </fragment>


</navigation>