<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="?attr/colorSecondaryVariant"
tools:context=".settings.ui.SettingsFragment">

<com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/toolbar"
    style="@style/MyAwesomeToolbar"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:title="@string/btn_settings" />

<com.google.android.material.switchmaterial.SwitchMaterial
    android:id="@+id/switch1"
    android:layout_width="0dp"
    android:layout_height="61dp"
    android:paddingStart="@dimen/layout_padding"
    android:paddingEnd="@dimen/layout_padding"
    android:background="?attr/colorSecondaryVariant"
    android:text="@string/btn_theme"
    android:textColor="?attr/colorOnSecondary"
    android:textSize="@dimen/button_text_size"
    app:thumbTint="@color/switch_thumb_color"
    app:trackTint="@color/switch_track_color"
    app:layout_constraintTop_toBottomOf="@id/toolbar"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

<TextView
    android:id="@+id/button_share_app"
    style="@style/MyAwesomeSettingsTextView"
    android:text="@string/btn_share"
    app:layout_constraintTop_toBottomOf="@id/switch1"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

<ImageButton
    android:id="@+id/share_icon"
    style="@style/MyAwesomeSettingsButton"
    android:contentDescription="@string/share_app"
    android:src="@drawable/ic_share"
    app:layout_constraintEnd_toEndOf="@id/button_share_app"
    app:layout_constraintTop_toTopOf="@id/button_share_app"
    app:layout_constraintBottom_toBottomOf="@id/button_share_app" />

<TextView
    android:id="@+id/button_help"
    style="@style/MyAwesomeSettingsTextView"
    android:text="@string/btn_help"
    app:layout_constraintTop_toBottomOf="@id/button_share_app"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

<ImageButton
    android:id="@+id/share_help"
    style="@style/MyAwesomeSettingsButton"
    android:contentDescription="@string/share_app"
    android:src="@drawable/help"
    app:layout_constraintEnd_toEndOf="@id/button_help"
    app:layout_constraintTop_toTopOf="@id/button_help"
    app:layout_constraintBottom_toBottomOf="@id/button_help" />

<TextView
    android:id="@+id/button_licence"
    style="@style/MyAwesomeSettingsTextView"
    android:text="@string/btn_licence"
    app:layout_constraintTop_toBottomOf="@id/button_help"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

<ImageButton
    android:id="@+id/licence"
    style="@style/MyAwesomeSettingsButton"
    android:contentDescription="@string/btn_licence"
    android:src="@drawable/licence"
    app:layout_constraintEnd_toEndOf="@id/button_licence"
    app:layout_constraintTop_toTopOf="@id/button_licence"
    app:layout_constraintBottom_toBottomOf="@id/button_licence" />

</androidx.constraintlayout.widget.ConstraintLayout>
