<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:theme="@style/Base.Theme.PlaylistMaker"
    android:fontFamily="@font/ys_display_regular"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4sp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/layout_padding"
        android:layout_marginTop="@dimen/layout_top_padding"
        android:layout_marginRight="@dimen/layout_padding"
        android:layout_marginBottom="@dimen/layout_margin_bottom"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            style="@style/MyAwesomeButton"
            android:id="@+id/btnFind"
            android:text="@string/find_button"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/light_mode" />

        <Button
            style="@style/MyAwesomeButton"
            android:id="@+id/btnMedia"
            android:text="@string/btn_media"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/media" />

        <Button
            style="@style/MyAwesomeButton"
            android:id="@+id/btnAdjusts"
            android:text="@string/btn_settings"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/adjusts"/>

    </LinearLayout>

</LinearLayout>