<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:theme="@style/Base.Theme.PlaylistMaker"
    android:fontFamily="@font/ys_display_regular"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lite_background"
    android:windowBackground="@color/lite_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="4sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

    <Button
        style="@style/MyAwesomeButton"
        android:id="@+id/btnFind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_top_padding"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/find_button"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/light_mode" />

    <Button
        style="@style/MyAwesomeButton"
        android:id="@+id/btnMedia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_spacing"
        app:layout_constraintTop_toBottomOf="@id/btnFind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/btn_media"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/media" />

    <Button
        style="@style/MyAwesomeButton"
        android:id="@+id/btnAdjusts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_spacing"
        app:layout_constraintTop_toBottomOf="@id/btnMedia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/btn_settings"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/adjusts"/>

</androidx.constraintlayout.widget.ConstraintLayout>
