<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/label_settings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/button_back"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/btn_settings"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <ImageButton
                android:contentDescription="@string/button_back"
                android:id="@+id/button_back"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:background="?android:attr/selectableItemBackground"
                android:baselineAlignBottom="true"
                android:clickable="true"
                android:src="@drawable/arrow_back_light_mode"
                android:text="" />
        </RelativeLayout>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:paddingStart="@dimen/layout_padding"
            android:paddingEnd="@dimen/layout_padding"
            android:text="@string/btn_theme"
            android:textColor="@android:color/black"
            android:textSize="@dimen/button_text_size"
            app:iconTintMode="multiply" />

        <RelativeLayout
            android:id="@+id/button_share_app"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="@dimen/layout_padding"
            android:paddingEnd="@dimen/layout_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:gravity="center_vertical"
                android:text="@string/btn_share"
                android:textColor="@android:color/black"
                android:textSize="@dimen/button_text_size"
                app:iconTintMode="multiply" />

            <ImageButton
                android:contentDescription="@string/share_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@color/white"
                android:baselineAlignBottom="false"
                android:clickable="false"
                android:src="@drawable/ic_share"
                android:textSize="@dimen/button_text_size"
                app:tintMode="multiply" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_help"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="@dimen/layout_padding"
            android:paddingEnd="@dimen/layout_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:gravity="center_vertical"
                android:text="@string/btn_help"
                android:textColor="@android:color/black"
                android:textSize="@dimen/button_text_size" />

            <ImageButton
                android:contentDescription="@string/button_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@color/white"
                android:baselineAlignBottom="false"
                android:clickable="false"
                android:src="@drawable/help"
                android:textSize="@dimen/button_text_size"
                app:tintMode="multiply" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_licence"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="@dimen/layout_padding"
            android:paddingEnd="@dimen/layout_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:gravity="center_vertical"
                android:text="@string/btn_licence"
                android:textColor="@android:color/black"
                android:textSize="@dimen/button_text_size" />

            <ImageButton
                android:contentDescription="@string/button_licence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@color/white"
                android:clickable="false"
                android:src="@drawable/licence"
                android:textSize="@dimen/button_text_size"
                app:tintMode="multiply" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>