<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context=".player.ui.view.AudioPlayerActivity">

    <!-- Тулбар -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/MyAwesomeToolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back_light_mode"
        app:title="" />

    <!-- Прокручиваемый контент -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Горизонтальные ограничения -->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

            <!-- Обложка трека -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/track_cover_container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="26dp"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:cardElevation="0dp"
                app:shapeAppearance="@style/MyAwesomeRoundedBigCover">

                <ImageView
                    android:id="@+id/track_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/track_cover_description"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/my_awesome_placeholder" />
            </com.google.android.material.card.MaterialCardView>


            <!-- Название трека -->
            <TextView
                android:id="@+id/track_name"
                style="@style/MyAwesomeTrackTitleParameter"
                android:layout_marginTop="24dp"
                android:text="@string/sample_track_name"
                android:textSize="22sp"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/track_cover_container" />

            <!-- Название исполнителя -->
            <TextView
                android:id="@+id/artist_name"
                style="@style/MyAwesomeTrackTitleParameter"
                android:layout_marginTop="12dp"
                android:text="@string/sample_artist_name"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/track_name" />

            <!-- Кнопка "Добавить в плейлист" -->
            <ImageButton
                android:id="@+id/buttonAdd"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:scaleType="center"
                android:background="@drawable/rounded_background_btn"
                android:src="@drawable/list_adding_icon"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintBottom_toBottomOf="@id/buttonPlay"
                app:layout_constraintTop_toTopOf="@id/buttonPlay"
                app:tint="?attr/colorPrimary" />

            <!-- Кнопка "Play/Pause" -->
            <ImageButton
                android:id="@+id/buttonPlay"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="26dp"
                android:scaleType="center"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_play"
                app:layout_constraintTop_toBottomOf="@id/artist_name"
                app:layout_constraintStart_toEndOf="@id/buttonAdd"
                app:layout_constraintEnd_toStartOf="@id/buttonLike"
                app:tint="?attr/colorOnSecondary" />

            <!-- Кнопка "Like" -->
            <ImageButton
                android:id="@+id/buttonLike"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:scaleType="center"
                android:background="@drawable/rounded_background_btn"
                android:src="@drawable/ic_unliked_song"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintBottom_toBottomOf="@id/buttonPlay"
                app:layout_constraintTop_toTopOf="@id/buttonPlay"/>

            <!-- Текущее время трека -->
            <TextView
                android:id="@+id/current_time"
                android:layout_width="100dp"
                android:layout_height="16dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:text="0:30"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/buttonPlay"
                app:layout_constraintStart_toStartOf="@id/buttonPlay"
                app:layout_constraintTop_toBottomOf="@id/buttonPlay" />

            <!-- Параметры трека -->
            <LinearLayout
                android:id="@+id/track_info_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/current_time">

                <include layout="@layout/track_info_row" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
